<resources>
    <string name="app_name">晨起锁机</string>
    <string name="lock_title">放下手机，开始新的一天</string>
    <string name="lock_subtitle">剩余锁定时间</string>
    <string name="btn_start_service">启动锁机服务</string>
    <string name="btn_stop_service">停止锁机服务</string>
    <string name="label_start_time">生效开始时间</string>
    <string name="label_end_time">生效结束时间</string>
    <string name="service_running">晨起锁机服务运行中</string>
    <string name="permission_overlay">需要悬浮窗权限</string>
    <string name="permission_notification">需要通知权限</string>
    <string name="miui_hint_title">MIUI 权限设置</string>
    <string name="miui_hint_autostart">请开启自启动权限</string>
    <string name="miui_hint_battery">请关闭电池优化</string>
    <string name="miui_hint_background">请允许后台弹出界面</string>
    <string name="notification_channel_name">锁机服务</string>
    <string name="notification_channel_desc">保持锁机服务在后台运行</string>
</resources>
